[gd_scene load_steps=49 format=3]

[ext_resource type="Texture2D" uid="uid://c13t4aq6iwa4y" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0015_Stinger1.png" id="1"]
[ext_resource type="Texture2D" uid="uid://wh1ub70du7qj" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0017_Antannae5.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c6aikamkkqcwj" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0009_Stripes3.png" id="3"]
[ext_resource type="Texture2D" uid="uid://d17bk42phtfmu" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0012_Stinger4.png" id="4"]
[ext_resource type="Texture2D" uid="uid://lxua80pl2ag8" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0007_Stripes5.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dc8uxwl442jft" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0008_Stripes4.png" id="6"]
[ext_resource type="Texture2D" uid="uid://862aukykgs31" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0001_AngryEyes.png" id="7"]
[ext_resource type="Texture2D" uid="uid://ducokj0qi0xuw" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0003_OldEyes.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dl5avvcsgvy41" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0020_Antannae2.png" id="9"]
[ext_resource type="Texture2D" uid="uid://c5rj44qm8x4j2" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0010_Stripes2.png" id="10"]
[ext_resource type="Texture2D" uid="uid://dweecr1e8a4wg" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0016_Antannae6.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cjlohcu1t3r7v" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0013_Stinger3.png" id="12"]
[ext_resource type="Texture2D" uid="uid://cvitb8udhh3vr" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0014_Stinger2.png" id="13"]
[ext_resource type="Texture2D" uid="uid://braxm32m14dir" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0000_Wings1.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dr4uxsk34mp47" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0019_Antannae3.png" id="15"]
[ext_resource type="Texture2D" uid="uid://blkmj81v0cg3o" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0005_DefaultEyes.png" id="16"]
[ext_resource type="Texture2D" uid="uid://darq0rrcqs12i" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0002_PrettyEyes.png" id="17"]
[ext_resource type="Texture2D" uid="uid://dkkn8ikcv2lyg" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0018_Antannae4.png" id="18"]
[ext_resource type="Texture2D" uid="uid://rjnvy6q07xlb" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0011_Stripes1.png" id="19"]
[ext_resource type="Texture2D" uid="uid://dpqrceb7uqr2b" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0004_NervousEyes.png" id="20"]
[ext_resource type="Texture2D" uid="uid://cbfia76r652u7" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0006_Stripes6.png" id="21"]
[ext_resource type="Texture2D" uid="uid://cdevpearnlad8" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0022_BASE.png" id="22"]
[ext_resource type="Texture2D" uid="uid://d4byi6kpdpl3" path="res://resources/images/BZLAVATAR/BzLModularAvatar_0021_Antennae1.png" id="23"]
[ext_resource type="Script" path="res://Prototype/AvatarHolder.gd" id="24"]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.454902, 0.454902, 0.454902, 0 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[node name="AvatarHolder" type="PanelContainer"]
offset_top = 18.0
offset_right = 204.0
offset_bottom = 193.0
custom_minimum_size = Vector2( 0, 175 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 24 )

[node name="Base" type="PanelContainer" parent="."]
offset_right = 204.0
offset_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
custom_styles/panel = SubResource( 6 )

[node name="Eyes" type="Control" parent="."]
offset_right = 204.0
offset_bottom = 175.0

[node name="Eyes" type="PanelContainer" parent="Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )

[node name="Eyes2" type="PanelContainer" parent="Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 8 )

[node name="Eyes3" type="PanelContainer" parent="Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )

[node name="Eyes4" type="PanelContainer" parent="Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )

[node name="Eyes5" type="PanelContainer" parent="Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )

[node name="Stripes" type="Control" parent="."]
offset_right = 204.0
offset_bottom = 175.0

[node name="Stripes1" type="PanelContainer" parent="Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )

[node name="Stripes2" type="PanelContainer" parent="Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 13 )

[node name="Stripes3" type="PanelContainer" parent="Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 14 )

[node name="Stripes4" type="PanelContainer" parent="Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 15 )

[node name="Stripes5" type="PanelContainer" parent="Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 16 )

[node name="Stripes6" type="PanelContainer" parent="Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 17 )

[node name="Antannae" type="Control" parent="."]
offset_right = 204.0
offset_bottom = 175.0

[node name="Antannae1" type="PanelContainer" parent="Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 18 )

[node name="Antannae2" type="PanelContainer" parent="Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 19 )

[node name="Antannae3" type="PanelContainer" parent="Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 20 )

[node name="Antannae4" type="PanelContainer" parent="Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 21 )

[node name="Antannae5" type="PanelContainer" parent="Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 22 )

[node name="Antannae6" type="PanelContainer" parent="Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )

[node name="Stinger" type="Control" parent="."]
offset_right = 204.0
offset_bottom = 175.0

[node name="Stinger1" type="PanelContainer" parent="Stinger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 24 )

[node name="Stinger2" type="PanelContainer" parent="Stinger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 25 )

[node name="Stinger3" type="PanelContainer" parent="Stinger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 26 )

[node name="Stinger4" type="PanelContainer" parent="Stinger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 27 )

[node name="Wings" type="Control" parent="."]
offset_right = 204.0
offset_bottom = 175.0

[node name="Wings1" type="PanelContainer" parent="Wings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 29 )
